--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "third/googletest"]
 	path = third/googletest
 	url = https://github.com/google/googletest.git
+[submodule "third/benchmark"]
+	path = third/benchmark
+	url = https://github.com/google/benchmark.git
