--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,4 +23,5 @@ link_libraries(gtest_main gtest benchmark::benchmark)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_subdirectory(src/design_mode/object_pool)
-add_subdirectory(src/grammar_example/chrono)
+add_subdirectory(src/lib/boost)
+# add_subdirectory(src/grammar_example/chrono)
